--- a/sources/css/tema-white.css
+++ b/sources/css/tema-white.css
@@ -275,7 +275,7 @@ article#dados-dash{
     background: #fff;
     padding: 20px 20px;
     border-radius: 7px;
-    height: 350px;
+    height: auto;
 }
 .fonte-trafego {
     flex-basis: 0;
@@ -283,7 +283,7 @@ article#dados-dash{
     background: #fff;
     padding: 20px 20px;
     border-radius: 7px;
-    height: 350px;
+    height: auto;
 }
 
 .avisos-dash {
