--- a/sources/css/tema-white.css
+++ b/sources/css/tema-white.css
@@ -268,6 +268,11 @@ article#dados-dash{
     display: flex;
     margin-bottom: 30px;
 }
+.titulo-dash {
+    margin-bottom: 30px;
+    padding-bottom: 30px;
+    border-bottom: 2px solid #ebedf2;
+}
 .estatiticas-vendas-visitas {
     flex-basis: 0;
     flex-grow:1.5;
